fix Noun title & arrow spacing

--- a/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
@@ -24,3 +24,7 @@
 .wrapper h1 {
   font-family: 'Londrina Solid' !important;
 }
+.nounName {
+  font-size: 2.25rem;
+  margin-top: 0.3rem;
+}
