--- a/packages/nouns-webapp/src/components/AuctionNavigation/AuctionNavigation.module.css
+++ b/packages/nouns-webapp/src/components/AuctionNavigation/AuctionNavigation.module.css
@@ -1,6 +1,6 @@
 .navArrowsContainer {
   position: absolute;
-  margin-top: 0.3rem;
+  /* margin-top: 0.3rem; */
   margin-left: 12.35rem;
 }
 
